style.css
/* ... */
.humburger {
    margin-top: 5px;
    margin-left: 20px;
    z-index: 3;
}

.humburger.active .bar:nth-child(2){
    opacity: 0;
}

.humburger.active .bar:nth-child(1){
    transform: translateY(18px) rotate(45deg);
    
}

.humburger.active .bar:nth-child(3){
    transform: translateY(-2px) rotate(-45deg);
    
}

.logo img {
    display: none;
}



ul.manu-item {
    display: flex;
    flex-direction: column;
    position: relative;
    top: 7px;
    list-style: none;
}


.manu-item a {
    text-decoration: none;
}

ul.manu-item a li {
    padding-top: 20px;
    font-size: 20px;
    color: #868686;
}

.main-menu {
    position: fixed;
    top: 0;
    width: 100%;
    height: 100vh;
    text-align: center;
    background-image: url(images/mobile_intro_bg.png);
    background-repeat: no-repeat;
    background-position-x: 30%;
    background-size: 548px;
    background-color: #fff;
    z-index: 2;
    transition: 0.3s;
    right: 100%;
}

.main-menu.active {
    right: 0;
}

.logo img {
    height: 51px;
}

 .block{
  background-image: url(images/mobile_intro_bg.png);
  background-repeat: no-repeat;
  background-position-x: 90%;
  background-size: 441px;
} 

.hero-container {
  margin-left: 5%;
  height: 200px;
  display: flex;
  flex-direction: column;
  justify-content: end;
}

.hero-container h4 {
  font-weight: 400;
  font-size: 20px;
  color: #fa3516;
}

.hero-container h1 {
    font-weight: 900;
    font-size: 33px;
    color: #fa3516;
    padding-right: 20px;
    line-height: 1.2;
  }

.hero-content {
    font-size: 13px;
    width: 356px;
    margin: 20px auto;
    background-color: #F5F5F5;
    border: 4px solid #fff;
    padding: 11px;
}

.hero-d {
    display: none;
}

.hero-date {
   margin-left: 20px;
    padding-bottom: 50px;
    padding-top: 13px;
}

.hero-date h4 {
    font-size: 14px;
    color: #7e7e7e;
}

.hero-date h1 {
    color: #595959;
    font-weight: 700; 
}

.main-program {
    background-image: url(images/bg1.png);
}

.program-heading {
    text-align: center;
}

.program-heading h2{
  color: #fff;
  font-weight: 300;
  padding-top: 22px;
  padding-bottom: 5px;
}

.program-heading::after {
    content: '';
    height: 2px;
    width: 10%;
    margin: 0 auto;
    background-color: #fa3516d1;
    position: absolute;
    left: 0;
    right: 0;
}

.program-contents {
    margin: 45px 10px;
}

.program-cont {
    display: flex;
    align-items: center;
    margin-bottom: 5px;
    background-color: #4c505842;
    padding: 10px;
}

.program-cont span img {
    width: 150px;
    height: 51px;
}

.program-cont h2 {

    font-size: 16px;
    color: #fa3516;
    margin-right: 15px;
}

h2.lecture {
    padding-right: 16px;
}

h2.forum {
    padding-right: 15px;
}

h2.ignite {
    padding-right: 30px;
}

h2.workshop {
    margin-right: 6px;
}

.program-cont div p {
    font-size: 13px;
    color: #fff;
}

.program-button {
    margin: 0 auto;
    width: 330px;
    padding-bottom: 35px;
}

.program-button button{
    padding: 23px 50px;
    background-color: #ff4f38;
    color: #fff;
    font-size: 18px;
    font-weight: 700;
    border: none;
}

.program-button-desktop {
    display: none;
}

section.featured-speakers-section {
    padding-bottom: 28px;
}

.featured-head {
    text-align: center;
    padding-top: 30px;
    padding-bottom: 55px;
}
.featured-head::after {
    content: '';
    height: 2px;
    width: 2%;
    margin: 0 auto;
    background-color: #c91b00d1;
    position: absolute;
    left: 0;
    right: 0;
}

.featured-head  h2{
   font-weight: 500;
   font-size: 23px;
   padding-bottom: 7px;
}

.speaker {
    display: flex;
    align-items: center;
    margin-bottom: 20px;
}

.speaker-text {
    margin-left: 10px;
}

.speaker-text p {
    font-size: 10px;
    font-weight: 600;
}

div.red-tex p {
    font-size: 10px;
    color: red;
}

.red-tex {
    margin-bottom: 10px;
}

div.red-tex::after {
    content: '';
    height: 2px;
    width: 5%;
    margin: 0 auto;
    background-color: #c4c4c4d1;
    position: absolute;
    left: 0;
    right: 112px;
}

.featured-speakers {
    margin: 20px 10px;
}

.speaker img {
    height: 143px;
}

button.more {
    display: flex;
    margin: 0 auto;
    padding: 10px 121px;
    align-items: center;
    border-radius: 4px;
    background-color: #fff;
    border: 1px solid #dcdcdc;
}

button.more img {
    margin-left: 10px;
}

section.partners-section {
    background-color: #414246;
}

.partners-heading {
    text-align: center;
    color: #fff;
    padding-top: 20px;
}

.partners-heading h2 {
    font-weight: 300;
}

.partners-heading::after {
    content: '';
    height: 2px;
    width: 10%;
    margin: 0 auto;
    background-color: #c91b00d1;
    position: absolute;
    left: 0;
    right: 0;
}

.partners-brand {
    padding: 25px 0px;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.partners-brand img {
    padding: 10px;
}

section.footer {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 20px;
}

section.footer img {
    padding-right: 20px;
}

section.footer p {
    font-size: 13px;
    line-height: 1;
    padding-left: 10px;
}


.about-hero-container {
    padding: 0 20px;
    text-align: center;
    color: #FF4F38;
}

.about-hero-container h1 {
    font-weight: 900;
    font-size: 30px;
    line-height: 1;
    padding-top: 10px;
}

header.about-hero-container h4 {
    padding-top: 15px;
    font-size: 20px;
}

.about-hero-content {
    margin: 20px 15px;
    padding: 20px 9px;
    text-align: center;
    background: #fff;
    line-height: 1.7;
    font-size: 14px;
    border: 1px solid #dadada;
}

.hero-contact {
    font-size: 14px;
    line-height: 1.7;
    text-align: center;
    padding: 0px 30px 25px 30px;
}

section.about-main {
    text-align: center;
    margin-top: 20px;
    font-size: 20px;
    line-height: 1.3;
}
/* ... */

